fixed the calendar layout

--- a/Calendrier.csproj
+++ b/Calendrier.csproj
@@ -65,6 +65,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.120" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.10" />
         <PackageReference Include="Syncfusion.Blazor.Calendars" Version="31.2.4" />
+        <PackageReference Include="Syncfusion.Blazor.Themes" Version="31.2.4" />
     </ItemGroup>
 
 </Project>
